syntax = "proto3";

package tricorn;

import "google/protobuf/empty.proto";
import "networks/networks.proto";
import "connector/connector.proto";
import "transfers/transfers.proto";

option go_package = "github.com/BoostyLabs/casper-eth-bridge/boosty-communication/go-gen/bridge-connector;pb_bridge_connector";

service Connector {
    // Return metadata of the network this connector provides.
    rpc Network(google.protobuf.Empty) returns (tricorn.Network);
    // Return tokens known by this connector.
    rpc KnownTokens(google.protobuf.Empty) returns (ConnectorTokens);
    
    // Initiate event stream from the network.
    rpc EventStream(EventsRequest) returns (stream Event);
    // Initiate outbound bridge transaction.
    rpc BridgeOut(TokenOutRequest) returns (TokenOutResponse);
    // Estimate a potential transfer.
    rpc EstimateTransfer(EstimateTransferRequest) returns (EstimateTransferResponse);

    // Return signature for user to send bridgeIn transaction.
    rpc BridgeInSignature(BridgeInSignatureWithNonceRequest) returns (BridgeInSignatureResponse);
    // Return signature for user to return funds.
    rpc CancelSignature(CancelSignatureRequest) returns (CancelSignatureResponse);
}
